--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,11 @@
   .square {
     aspect-ratio: 1 / 1;
   }
+
+  .neon {
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  }
 }
 
 body {
